--- a/css-files/home.css
+++ b/css-files/home.css
@@ -1,12 +1,7 @@
-body {
-  background-image: linear-gradient(to right, orange, black);
-  padding-top: 5%;
-  box-sizing: border-box;
-}
 .container {
   width: 90%;
   height: 100%;
-  background-color: white;
+  background-color: black;
   margin: auto;
 }
 
@@ -17,8 +12,8 @@ header {
   align-items: center;
 }
 header img {
-  width: 5vw;
-  height: 5vw;
+  width: 7vw;
+  height: 7vw;
 }
 
 nav {
@@ -29,12 +24,11 @@ nav {
   margin-left: -10%;
 }
 nav a {
-  color: orange;
+  color: #ec9315;
   display: inline-block;
   text-decoration: none;
 }
 nav a:focus {
-  color: rgb(138, 73, 13);
   transform: scale(1.2);
-  transition: 0.5s;
+  transition: 0.1s;
 }
