--- a/css-files/home.css
+++ b/css-files/home.css
@@ -1,34 +1,66 @@
+html {
+  font-size: 16px;
+}
 .container {
-  width: 90%;
-  height: 100%;
-  background-color: black;
-  margin: auto;
+  width: 100vw;
 }
 
-header {
-  display: flex;
-  justify-content: space-around;
-  padding: 3%;
+.slider {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+  height: auto;
+  background-color: #ec9315;
   align-items: center;
+  justify-items: center;
 }
-header img {
-  width: 7vw;
-  height: 7vw;
+.box {
+  width: 50%;
+  height: 30vh;
+  position: relative;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../images/beer-background.jpg") right/cover;
 }
 
-nav {
-  text-transform: uppercase;
-  display: flex;
-  justify-content: space-evenly;
-  width: 80%;
-  margin-left: -10%;
+.slider img {
+  display: none;
 }
-nav a {
-  color: #ec9315;
-  display: inline-block;
-  text-decoration: none;
-}
-nav a:focus {
-  transform: scale(1.2);
-  transition: 0.1s;
+
+@media screen and (min-width: 900px) {
+  html {
+    font-size: 20px;
+  }
+  .container {
+    width: 90%;
+    margin: auto;
+  }
+
+  .slider {
+    background-color: #ec9315;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+  }
+
+  .slider img {
+    width: 5%;
+    display: block;
+  }
+  .boxes {
+    display: flex;
+    width: 80%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .box {
+    width: 25%;
+    height: 80%;
+    color: white;
+    border: 2px solid orange;
+    text-align: center;
+    position: relative;
+  }
 }
