--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,6 @@
 html {
   font-size: 16px;
+  position: relative;
 }
 
 .slider {
@@ -33,6 +34,42 @@ html {
 }
 .side-bar {
   display: none;
+}
+.modal {
+  display: none;
+  text-align: center;
+  background-color: gray;
+  color: white;
+  width: 90%;
+  height: 90vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.modal p {
+  font-size: 2vw;
+  padding: 0 0.7vw;
+  margin: 0;
+  position: absolute;
+  top: 0%;
+  left: 96%;
+  background-color: red;
+  border: 2px solid #ec9315;
+}
+.modal img {
+  width: 30%;
+  height: 20vw;
+  border: 2px solid #ec9315;
+}
+.overlay {
+  position: absolute; /* Positioning and size */
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(128, 128, 128, 0.5); /* color */
+  display: none; /* making it hidden by default */
 }
 
 @media screen and (min-width: 600px) {
@@ -101,7 +138,6 @@ html {
     font-size: 20px;
   }
   body {
-    width: 90%;
     margin: auto;
   }
 
