--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,12 @@ html {
   font-size: 16px;
   position: relative;
 }
-
+body {
+  background-color: black;
+}
+.aaa {
+  padding: 0 1%;
+}
 .slider {
   display: flex;
   width: 100%;
@@ -38,11 +43,11 @@ html {
 .modal {
   display: none;
   text-align: center;
-  background-color: gray;
+  background-color: black;
   color: white;
   width: 90%;
   height: 90vh;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -66,13 +71,52 @@ html {
   position: absolute; /* Positioning and size */
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: rgba(128, 128, 128, 0.5); /* color */
   display: none; /* making it hidden by default */
 }
 
+.container1 {
+  width: 100%;
+  background-color: #ec9315;
+  display: block;
+}
+.container1 img {
+  width: 30%;
+  height: 15vw;
+
+  margin-bottom: 2%;
+  padding: 2%;
+}
+.container1 h2 {
+  margin: 1% 0 3% 0;
+  padding: 5%;
+}
+
+.top-rated {
+  display: flex;
+  margin: 1% 1% 1% 20%;
+  width: 60%;
+  background-color: gray;
+}
+.top-rated p {
+  margin: 3 0 5% 2%;
+  font-weight: bold;
+  font-size: 0.8rem;
+}
+.btn {
+  margin: 5% 35%;
+  padding: 2%;
+  width: 30%;
+}
+
 @media screen and (min-width: 600px) {
+  .bbb {
+    display: grid;
+    grid-template-columns: 80% 20%;
+  }
+
   .container {
     display: flex;
   }
@@ -81,12 +125,15 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
     height: 50%;
+  }
+  .slider img {
+    padding: 1%;
   }
   .boxes {
     display: flex;
-    width: 80%;
+    width: 90%;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -94,7 +141,7 @@ html {
   }
   .box {
     font-size: 1.2rem;
-    width: 40%;
+    width: 45%;
     height: 33vw;
     color: white;
     border: 2px solid orange;
@@ -107,9 +154,9 @@ html {
   }
   .side-bar {
     display: block;
-    width: 20%;
+    width: 100%;
     height: auto;
-    background-color: rgb(187, 179, 179);
+    background-color: gray;
     color: black;
   }
   .best-box {
@@ -131,6 +178,28 @@ html {
     border: 2px solid red;
     height: 10vh;
   }
+  .container1 {
+    background-color: #ec9315;
+    display: flex row;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+  }
+  .top-rated-wraper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+  }
+  .top-rated {
+    display: flex;
+    width: 80%;
+    margin: 1% 0;
+  }
+
+  .container1 img {
+    width: 10vw;
+    height: 10vw;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -147,7 +216,7 @@ html {
   }
   .boxes {
     display: flex;
-    width: 80%;
+    width: 90%;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -155,11 +224,22 @@ html {
   }
   .box {
     font-size: 1rem;
-    width: 30%;
+    width: 45%;
     height: 25vw;
     color: white;
     border: 2px solid orange;
     text-align: center;
     position: relative;
+  }
+  .container1 {
+    background-color: #ec9315;
+    display: block;
+  }
+  .top-rated-wraper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .top-rated {
+    width: 90%;
   }
 }
