--- a/css/list.css
+++ b/css/list.css
@@ -42,12 +42,8 @@ body {
     padding: 3%;
 }
 
-.info p {
-    /* padding-top:7%; */
-}
-
 .pagenumbers {
-    margin: 10px;
+    margin: 10%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -55,15 +51,15 @@ body {
 }
 
 .pagenumbers button {
-    width: 20px;
-    height: 30px;
+    width: 2em;
+    height: 3em;
     appearance: none;
     border: none;
     border-radius: 5px;
     outline: none;
     cursor: pointer;
     background-color: #EC9315;
-    margin: 5px;
+    margin: 1%;
     transition: 0.4s;
     color: #FFF;
     font-size: 12px;
@@ -89,7 +85,8 @@ body {
 }
 
 .search input {
-    width: 60%;
+    font-size: 1.3em;
+    width: 80%;
     padding: 2vw;
     border: solid #3F352E 1px;
 }
@@ -105,43 +102,116 @@ body {
     padding: 4vw 6vw;
 }
 
+
+
 /* laptops, desktops */
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 769px) and (max-width: 957px) {
 
-
-    .main {
-        background-color: red;
+    .search input {
+        width: 60%;
+        font-size: 1.1em;
     }
-    
+
     .elements {
-        width: 50%;
+        width: 100%;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .element {
-        width: 500px;
-        height: auto;
-        /* margin: 0 auto; */
-        background-color: lightgray;
-        margin-top: 3%;
-        padding: 50px;
+        width: 40%;
+
     }
-    
+   
     .element-img {
-        width: 200px;
-        padding: 3%;
+        width: 50%;
+        margin: 0 auto;
     }
     
     .element-img img {
-        width: 35vw;
-        height: 20vh;
+        width: 25vh;
+        height: 30vh;
+        padding-right: 15%;
     }
     
     .info {
-
+        font-size: 1.1em;
+        padding-left: 10%;
+        line-height: 1.7;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     
 }
 
+@media screen and (min-width: 958px) {
 
+    .elements {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .element {
+        width: 40%;
+    }
+
+    .element-img {
+        width: 50%;
+    }
+    
+    .element-img img {
+        width: 30vh;
+        height: 30vh;
+        padding: 0;
+    }
+
+    .search {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 10% 0 2% 0;
+    }
+
+    .info {
+        font-size: 1.2em;
+        padding-left: 11%;
+        line-height: 1.7;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
+    .search input {
+        width: 40%;
+        padding: 1vw;
+    }
+    
+    .filter {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .inp-option {
+        display: inline-block;
+        padding: 2vw 3vw;
+    }
+
+    .pagenumbers {
+        margin: 6%;
+    }
+}
+
+@media screen and (min-width: 1272px) {
+    .element-img img {
+        width: 40vh;
+        height: 40vh;
+    }
+
+    .info {
+        line-height: 2.7;
+
+    }
+} 
