--- a/css/list.css
+++ b/css/list.css
@@ -22,7 +22,7 @@ body {
     width: 80%;
     height: auto;
     margin: 0 auto;
-    background-color: lightgray;
+    background-color: #D1D3D4;
     display: flex;
     flex-direction: row;
     margin-top: 3%;
