--- a/css/list.css
+++ b/css/list.css
@@ -102,7 +102,11 @@ body {
     padding: 4vw 6vw;
 }
 
-
+#selected-type {
+    text-align: center;
+    padding-top: 3vh;
+    font-size: 2em;
+}
 
 /* laptops, desktops */
 @media screen and (min-width: 769px) and (max-width: 957px) {
@@ -202,6 +206,7 @@ body {
     .pagenumbers {
         margin: 6%;
     }
+
 }
 
 @media screen and (min-width: 1272px) {
