--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,15 @@
+footer {
+    width: 100%;
+}
+
 .footer-wrapper {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #3F352E;
-    width: 100%;
+    
     height: auto;
     color: #D1D3D4;
     text-align: center;
@@ -50,7 +55,7 @@
 .copyright {
     width: 100%;
     font-size: 0.8em;
-    padding: 10% 1% 1% 3%;
+    padding: 10% 0% 1% 0%;
 }
 /* iPads, tablets... */
 @media screen and (min-width: 481px) and (max-width: 768px) {
