--- a/css/home.css
+++ b/css/home.css
@@ -36,17 +36,16 @@ body {
   background-position: right;
   background-size: cover;
   padding: 2%;
-  position: relative;
 }
 .btn-box {
   cursor: pointer;
   background-color: #ec9315;
   color: white;
   font-size: 3vw;
-  position: absolute;
-  bottom: 5%;
-  right: 20%;
-  padding: 2% 10%;
+  margin-top: 25%;
+  margin-left: 20%;
+  width: 70%;
+  padding: 2%;
 }
 .btn-box:hover {
   transform: scale(1.2);
@@ -220,11 +219,8 @@ body {
   .side-bar {
     display: block;
     width: 100%;
-    max-height: 100%;
     background-color: gray;
     color: black;
-    overflow: hidden;
-    padding-bottom: -250px;
   }
   .best-box {
     text-align: center;
@@ -315,12 +311,15 @@ body {
     width: 20%;
     height: 30%;
   }
+  .side-bar {
+    height: 95%;
+  }
 
   .iframe {
     position: relative;
     display: block;
     border: none;
-    transform: scale(0.7) translate(-27%, -20%);
+    transform: scale(0.7) translate(-28%, -20%);
     padding: 15%;
   }
 
@@ -344,6 +343,9 @@ body {
   }
 }
 @media screen and (min-width: 1200px) {
+  .side-bar {
+    height: 100%;
+  }
   .iframe {
     display: block;
     border: none;
