--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -1,192 +1,187 @@
-
-
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .upper-section {
-    width: 100vw;
-    height: 40vh;
-    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.6)), url("../images/constacus-bckgr.jpg");
-    background-position: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2.1em;
-    color: #FFF;
+  width: 100vw;
+  height: 40vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)),
+    url("../images/constacus-bckgr.jpg");
+  background-position: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.1em;
+  color: #fff;
 }
 
 .main-wrapper {
-    margin: 0;
-    padding: 0;
-    color: #525151;
+  margin: 0;
+  padding: 0;
+  color: #525151;
 }
 
 .main-section {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-wrapper h2 {
-    color: #525151;
-    text-align: center;
-    font-size: 2.1rem;
-    margin: 3%;
+  color: #525151;
+  text-align: center;
+  font-size: 2.1rem;
+  margin: 3%;
 }
 
 .form-wrapper form {
-    width: 90%;
-    margin: 0 auto;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .text-field {
-    display: flex;
-    flex-direction: column;
-    margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
 }
 
 .text-field label {
-    font-size: 1.2em;
-
+  font-size: 1.2em;
 }
 
-.text-field input[type=text], [type=number] {
-    padding: 4%;
-    border-left:5px;
-    border-right: 0;
-    border-bottom: 0px;
-    border-top: 0;
-    border-style: solid;
-    border-color: #EC9315;
-    background-color: #D1D3D4;
-    outline: none;
+.text-field input[type="text"],
+[type="number"] {
+  padding: 4%;
+  border-left: 5px;
+  border-right: 0;
+  border-bottom: 0px;
+  border-top: 0;
+  border-style: solid;
+  border-color: #ec9315;
+  background-color: #d1d3d4;
+  outline: none;
 }
 
 .text-field textarea {
-    outline: none;
-    border-left:5px;
-    border-right: 0;
-    border-bottom: 0px;
-    border-top: 0;
-    border-style: solid;
-    border-color: #EC9315;
-    background-color: #D1D3D4;
-    font-size: 1.2em;
+  outline: none;
+  border-left: 5px;
+  border-right: 0;
+  border-bottom: 0px;
+  border-top: 0;
+  border-style: solid;
+  border-color: #ec9315;
+  background-color: #d1d3d4;
+  font-size: 1.2em;
 }
 
-.checkbox  {
-    margin-top: 5%;
-    text-align: justify;
-    font-size: 1em
+.checkbox {
+  margin-top: 5%;
+  text-align: justify;
+  font-size: 1em;
 }
 
 .checkbox input {
-    width: 1.2em;
-    height: 1.2em;
+  width: 1.2em;
+  height: 1.2em;
 }
 
 .sbm-btn input {
-    margin: 0 auto;
-    border: #EC9315 solid 5px;
-    padding: 4%;
-    width: 50%;
+  margin: 0 auto;
+  border: #ec9315 solid 5px;
+  padding: 4%;
+  width: 50%;
 }
 
 .info {
-    padding-top: 15%;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    width: 90%;
-    color: #525151;
+  padding-top: 15%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 90%;
+  color: #525151;
 }
 
 #phone {
-    font-size: 1.3em;
+  font-size: 1.3em;
 }
 
 #phone i {
-    color: #EC9315;
+  color: #ec9315;
 }
 
 .info h4 {
-    font-size: 1.3em;
+  font-size: 1.3em;
 }
 
 .cu-social {
-    padding: 3%;
+  padding: 3%;
 }
 
 .cu-social a {
-    padding: 2%;
-    color: #EC9315;
-    font-size: 1.2em;
+  padding: 2%;
+  color: #ec9315;
+  font-size: 1.2em;
 }
 
 @media screen and (min-width: 846px) {
+  .upper-section {
+    height: 50vh;
+    font-size: 3em;
+  }
+  .main-section {
+    display: flex;
+    flex-direction: row;
+  }
 
-    .upper-section {
-        height: 50vh;
-        font-size: 3.0em;
-    }
-    .main-section {
-        display: flex;
-        flex-direction: row;
-    }
+  .form-wrapper {
+    width: 40%;
+    margin: 0 auto;
+  }
 
-    .form-wrapper {
-        width: 40%;
-        margin: 0 auto;
-    }
+  .info {
+    padding-top: 7%;
+    width: 30%;
+    font-size: 1.2em;
+  }
 
-    .info {
-        padding-top: 7%;
-        width: 30%;
-        font-size: 1.2em;
-    }
+  .text-field input[type="text"],
+  [type="number"] {
+    padding: 3%;
+    width: 80%;
+  }
 
-    .text-field input[type=text], [type=number] {
-        padding: 3%;
-        width: 80%;
-    }
+  .text-field input[type="text"]:focus,
+  [type="number"]:focus {
+    background-color: #525151;
+    color: #d1d3d4;
+  }
 
-    .text-field input[type=text]:focus, [type=number]:focus {
-        background-color: #525151;
-        color: #D1D3D4;
-    }
+  .text-field textarea {
+    width: 86%;
+    font-size: 1em;
+  }
 
-    .text-field textarea {
-        width: 86%;
-        font-size: 1.0em;
-    }
+  .text-field textarea:focus {
+    background-color: #525151;
+    color: #d1d3d4;
+  }
 
-    .text-field textarea:focus {
-        background-color: #525151;
-        color: #D1D3D4;
-    }
+  .checkbox {
+    width: 86%;
+    margin-top: 5%;
+    font-size: 1.2em;
+  }
 
-    .checkbox  {
-        width: 86%;
-        margin-top: 5%;
-        font-size: 1.2em;
+  .sbm-btn input {
+    margin: 5% 5% 5% 0;
+    padding: 2%;
+    width: 30%;
+  }
 
-    }
-
-    .sbm-btn input {
-        margin: 5% 5% 5% 0;
-        padding: 2%;
-        width: 30%;
-    }
-
-    .sbm-btn input:hover {
-        transition: 0.3s;
-        transform: scale(1.1);
-        background-color: #525151;
-        color: #D1D3D4;
-    }
-    
-
+  .sbm-btn input:hover {
+    transition: 0.3s;
+    transform: scale(1.1);
+    background-color: #525151;
+    color: #d1d3d4;
+  }
 }
-
-
