--- a/css/home.css
+++ b/css/home.css
@@ -59,6 +59,7 @@ body {
 }
 .side-bar {
   display: none;
+  overflow: hidden;
 }
 .modal {
   display: none;
@@ -174,6 +175,7 @@ body {
   .whole-page {
     display: grid;
     grid-template-columns: 80% 20%;
+    grid-template-rows: auto;
   }
 
   .container {
