--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -4,7 +4,7 @@
 }
 
 .upper-section {
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)),
     url("../images/constacus-bckgr.jpg");
