--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,6 @@
 footer {
     width: 100%;
+    font-size: 15px;
 }
 
 .footer-wrapper {
@@ -9,28 +10,20 @@ footer {
     justify-content: center;
     align-items: center;
     background-color: #3F352E;
-    
     height: auto;
     color: #D1D3D4;
     text-align: center;
-}
-
-.footer-content {
-    margin: 5% 10% 10% 10%;
-}
-
-.footer-content h2 {
-    font-size: 2.5em;
-    padding-bottom: 5% ;
+    margin: 0;
 }
 
 .footer-social {
     width: 100%;
-    font-size: 2em;
+    font-size: 5px;
     margin-bottom: 10%;
 }
 
 .footer-social a {
+    font-size: 30px;
     display: inline-block;
     color: #D1D3D4;
     padding: 5% 10% 2% 10%;
@@ -38,6 +31,10 @@ footer {
 
 .site-map {
     width: 100%;
+}
+
+.site-map ul {
+    padding: 0;
 }
 
 .site-map ul li {
@@ -60,12 +57,8 @@ footer {
 /* iPads, tablets... */
 @media screen and (min-width: 481px) and (max-width: 768px) {
 
-    .footer-content {
-        margin: 2% 5% 2% 5%;
-    }
-
     .footer-social {
-        font-size: 2.5em;
+        font-size: 30px;
         margin-bottom: 3%;
     }
 
@@ -84,17 +77,8 @@ footer {
         height: auto;
     }
 
-    .footer-content h2 {
-        font-size: 2.5em;
-        padding-bottom: 2%;
-    }
-
-    .footer-content {
-        margin: 0;
-    }
-
     .footer-social {
-        font-size: 1.5em;
+        font-size: 30px;
         margin: 0;
     }
 
@@ -104,6 +88,11 @@ footer {
 
     .footer-social a:hover {
         color: #EC9315;
+    }
+
+    .site-map ul {
+        padding: 0;
+        margin: 2% 0 2% 0;
     }
 
     .site-map ul li {
@@ -116,9 +105,12 @@ footer {
     }
 
     .copyright {
-        font-size: 0.8em;
+        font-size: 13px;
         padding: 0;
-        margin-bottom: 4px;
-        margin-top: 2%;
+        margin-bottom: 1%;
+    }
+
+    .copyright p {
+        margin: 0;
     }
 }
