--- a/css/header.css
+++ b/css/header.css
@@ -114,7 +114,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 10vh;
+    height: 13vh;
     
   }
   header img {
@@ -163,8 +163,8 @@ nav {
   }
 
   nav ul li ul {
-    margin-left: -100px;
-    width: 12vw;
+    margin-left: -10vw;
+    width: 25vw;
     height: 0;
     visibility: hidden;
     opacity: 0;
@@ -174,7 +174,7 @@ nav {
     background-color: #3F352E;
     border-radius: 10px;
     padding: 15px;
-    z-index: 1000;
+    z-index: 100;
 
   }
 
@@ -183,7 +183,7 @@ nav {
     visibility:visible;
     opacity: 0.9;
     transform: translateY();
-    z-index: 1000;
+    z-index: 100;
   }
 
   nav ul li ul li {
@@ -207,4 +207,14 @@ nav {
     border: 2px solid #111;
     padding: 5px;
   }
+}
+
+@media screen and (min-width: 1000px) {
+
+  nav ul li ul {
+    margin-left: -5vw;
+    width: 13vw;
+  }
+
+
 }
