--- a/css/header.css
+++ b/css/header.css
@@ -157,6 +157,12 @@ nav {
     color: #ec9315;
   }
 
+  a:is(:link, :active, :visited).active {
+    border: 3px solid #ec9315;
+    border-radius: 5px ;
+    padding: 10px;
+  }
+
   nav ul li:hover {
     transition: 0.3s;
     transform: scale(1.1);
@@ -175,7 +181,6 @@ nav {
     border-radius: 10px;
     padding: 15px;
     z-index: 100;
-
   }
 
   nav ul li:hover ul {
