--- a/css/about-us.css
+++ b/css/about-us.css
@@ -2,6 +2,7 @@ body {
   font-size: 16px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   position: relative;
+  margin: 0;
 }
 
 html {
@@ -14,9 +15,12 @@ html {
   box-sizing: inherit;
 }
 .row {
-  text-decoration: underline overline;
   text-shadow: #525151;
   animation: backwards;
+}
+.row h2 {
+  text-align: center;
+  color: #3f352e;
 }
 .column {
   float: left;
@@ -31,7 +35,10 @@ html {
   margin: 8px;
   border: #525151;
 }
-
+.card img {
+  width: 100%;
+  height: 70%;
+}
 .about-section {
   padding: 50px;
   text-align: center;
@@ -42,6 +49,7 @@ html {
 
 .container {
   padding: 0 16px;
+  color: #3f352e;
 }
 
 .container::after,
@@ -61,7 +69,7 @@ html {
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: #000;
+  background-color: #3f352e;
   text-align: center;
   cursor: pointer;
   width: 100%;
@@ -71,7 +79,7 @@ html {
   background-color: #555;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 600px) {
   .column {
     width: 100%;
     display: block;
