--- a/css/list.css
+++ b/css/list.css
@@ -6,6 +6,8 @@
 
 body {
     background-color: #FFF;
+    font-family: 'Fira Sans', sans-serif;
+    color: #3F352E;
 }
 
 .container {
@@ -15,7 +17,6 @@ body {
 
 .elements {
     width: 100%;
-
 }
 
 .element {
@@ -26,6 +27,7 @@ body {
     display: flex;
     flex-direction: row;
     margin-top: 3%;
+    box-shadow: 2px 3px 8px #3F352E;
 }
 
 .element-img {
@@ -79,16 +81,25 @@ body {
 .search {
     width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     margin: 10% 0 2% 0;
-
 }
 
 .search input {
     font-size: 1.3em;
+    outline: 0;
     width: 80%;
     padding: 2vw;
     border: solid #3F352E 1px;
+    border: 0;
+    border-bottom: 3px solid #EC9315;
+}
+
+.search input:focus {
+    background-color: #3F352E;
+    color: #D1D3D4;
+    opacity: 0.8;
 }
 
 .filter {
@@ -126,7 +137,6 @@ body {
 
     .element {
         width: 40%;
-
     }
    
     .element-img {
